# base-support-system

./: .env-example  .gitignore  Makefile  docker-compose.override.yml  docker-compose.yml  test.http
api-service/: Dockerfile  __init__.py  alembic.ini  entrypoint.sh  pyproject.toml
api-service/migrations/: env.py
api-service/migrations/versions/: 295ab353a102_user_table.py  2c09d919ab18_account_table.py
api-service/src/: __init__.py
api-service/src/api_service/: __init__.py  logger.py  schemas.py  utils.py  views.py
api-service/src/auth/: base_config.py  schemas.py  utils.py
api-service/src/database/: __init__.py  db.py  models.py  settings.py
frontend/: Dockerfile  README.md  eslint.config.cjs  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  tsconfig.node.json  vetur.config.js  vite.config.ts
frontend/src/: App.vue  auto-imports.d.ts  main.ts
frontend/src/components/: BackButton.vue  ExitButton.vue  Login.vue  NewTicket.vue  Registration.vue  SoundRecorder.vue  UserTicketsList.vue
frontend/src/components/template/: InputControl.vue  Modal.vue  SubmitControl.vue
frontend/src/plugins/: use-password-visibility.ts
frontend/src/plugins/vuelidate/: validation-rules.ts
frontend/src/router/: index.ts
frontend/src/store/: userData.ts
frontend/src/styles/: _variables.scss  main.scss
frontend/src/utils/: token.ts
frontend/src/views/: Auth.vue  HomePage.vue  Manager.vue  NotFound.vue  Profile.vue  Specialist.vue
pgadmin/: pgadmin4.db
pgadmin/sessions/: 210656b1-f6f7-41e1-b050-95587460d272
(+1 files in other folders)
